Update Fixed small video handling, Changed scrollbar style, Added intro icon, Added maxheight for summary and transcript
Former-commit-id: 5955fd421727000907604b3bda1df55e9dae10a0

--- a/src/web/deep-read-user-interface/src/App.css
+++ b/src/web/deep-read-user-interface/src/App.css
@@ -79,3 +79,12 @@
 .MuiDrawer-paper{
     background-color: brown;
 }
+
+::-webkit-scrollbar{
+    width: 6px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #FF6611;
+    border-radius: 25px;
+}
